Fixed change in class overlap

--- a/client/galaxy/style/less/reports.less
+++ b/client/galaxy/style/less/reports.less
@@ -214,7 +214,7 @@
     width: 25%;
 }
 
-.toolFormBody {
+.reportToolFormBody {
     text-align: center;
     text-align: -moz-center;
 }
